--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,5 +26,5 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: run tests
-      run: run.sh
+      run: ./run.sh
       working-directory: ./tests
