--- a/.github/workflows/docker-image-ci.yml
+++ b/.github/workflows/docker-image-ci.yml
@@ -1,4 +1,4 @@
-name: docker image ci
+name: docker-image
 
 on:
   pull_request:
@@ -12,7 +12,7 @@ on:
     - master
 
 jobs:
-  test:
+  docker-build-test:
     runs-on: ubuntu-18.04
 
     steps:
