--- a/.github/workflows/sample-test.yml
+++ b/.github/workflows/sample-test.yml
@@ -1,6 +1,6 @@
 on:
   schedule:
-    - cron: '20 17 * * *'
+    - cron: '25 17 * * *'
 
 name: Check markdown links
 jobs:
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
     - name: Check
-      uses: ruzickap/action-broken-link-checker@v1
+      uses: ruzickap/action-test@v1
       env:
         URL: https://www.google.com
 
@@ -21,5 +21,5 @@ jobs:
         PAGES_PATH: ./tests/
         MUFFET_CMD_PARAMS: --skip-tls-verification
       run: |
-        wget https://raw.githubusercontent.com/ruzickap/action-broken-link-checker/v1/entrypoint.sh
+        wget https://raw.githubusercontent.com/ruzickap/action-test/v1/entrypoint.sh
         bash ./entrypoint.sh
