--- a/.github/workflows/sample-test.yml
+++ b/.github/workflows/sample-test.yml
@@ -1,6 +1,6 @@
 on:
   schedule:
-    - cron: '23 20 * * *'
+    - cron: '30 20 * * *'
 
 name: Check broken links
 jobs:
@@ -25,8 +25,9 @@ jobs:
 
     - name: Check - simple - local pages
       env:
-        MUFFET_CMD_PARAMS: --skip-tls-verification
+        MUFFET_CMD_PARAMS: --skip-tls-verification --verbose
         URL: https://my-testing-domain.com
         PAGES_PATH: ./tests/
+        DEBUG: true
       run:
         wget -qO- https://raw.githubusercontent.com/ruzickap/action-test/v1/entrypoint.sh | bash
