--- a/.github/workflows/check-commands.yml
+++ b/.github/workflows/check-commands.yml
@@ -19,4 +19,4 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Check commands in README.md file
-      run: sed -n '/^```bash.*/,/^```$/p' README.md | sed '/^```*/d'
+      run: sed -n '/^```bash.*/,/^```$/p' README.md | sed '/^```*/d' | bash
