--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,7 +14,6 @@ on:
 jobs:
   docker-build-test:
     runs-on: ubuntu-18.04
-
     steps:
       - uses: actions/checkout@v2
 
@@ -31,8 +30,11 @@ jobs:
         run: shellcheck ./entrypoint.sh
 
   hadolint:
-    runs-on: macos-latest
-    steps:
+    runs-on: ubuntu-18.04
       - uses: actions/checkout@v2
-      - run: brew install hadolint
-      - run: hadolint ./Dockerfile
+
+      - name: hadolint
+        uses: burdzwastaken/hadolint-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          HADOLINT_ACTION_DOCKERFILE_FOLDER: .
