--- a/.github/workflows/update_semver.yml
+++ b/.github/workflows/update_semver.yml
@@ -11,6 +11,8 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
-      - uses: haya14busa/action-update-semver@v1
+
+      - name: Semver
+        uses: haya14busa/action-update-semver@v1
         with:
           github_token: ${{ secrets.github_token }}
