--- a/.github/workflows/check-commands.yml
+++ b/.github/workflows/check-commands.yml
@@ -18,4 +18,4 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Check commands in README.md file
-        run: sed -n '/^```bash.*/,/^```$/p' README.md | sed '/^```*/d' | bash
+        run: sed -n '/^```bash.*/,/^```$/p' README.md | sed '/^```*/d' | bash -x
