--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,6 +25,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: run tests
+      - name: Run tests
+        env:
+          TERM: xterm
         run: ./run.sh
         working-directory: ./tests
