--- a/.github/workflows/markdown-checks.yml
+++ b/.github/workflows/markdown-checks.yml
@@ -54,6 +54,4 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Link Checker
-        uses: peter-evans/link-checker@v1
-        with:
-          args: -v -r *.md
+        uses: gaurav-nelson/github-action-markdown-link-check@0.4.0
