--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: shellcheck
-        run: shellcheck tests/run.sh
+        run: shellcheck tests/run_tests.sh
 
   tests:
     runs-on: ubuntu-18.04
@@ -26,5 +26,5 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Run tests
-        run: ./run.sh
+        run: ./run_tests.sh
         working-directory: ./tests
