--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: shellcheck
-        run: shellcheck tests/run_tests.sh
+        run: shellcheck tests/*.sh
 
   tests:
     runs-on: ubuntu-18.04
