--- a/.github/workflows/sample-test.yml
+++ b/.github/workflows/sample-test.yml
@@ -1,6 +1,6 @@
 on:
   schedule:
-    - cron: '0 0 * * 0'
+    - cron: '0 7 * * 0'
 
 name: Check broken links
 jobs:
@@ -29,3 +29,45 @@ jobs:
           INPUT_PAGES_PATH: ./tests/
         run:
           wget -qO- https://raw.githubusercontent.com/ruzickap/action-test/v1/entrypoint.sh | bash
+
+jobs:
+  build-deploy:
+    runs-on: ubuntu-18.04
+    steps:
+      - name: Create web page
+        run: |
+          mkdir -v public
+          cat > public/index.html << EOF
+          <!DOCTYPE html>
+          <html>
+            <head>
+              My page which will be stored on my-testing-domain.com domain
+            </head>
+            <body>
+              Links:
+              <ul>
+                <li><a href="https://my-testing-domain.com">https://my-testing-domain.com</a></li>
+                <li><a href="https://my-testing-domain.com:443">https://my-testing-domain.com:443</a></li>
+              </ul>
+            </body>
+          </html>
+          EOF
+
+      - name: Check links using script
+        env:
+          INPUT_URL: https://my-testing-domain.com
+          INPUT_PAGES_PATH: ./public/
+          INPUT_CMD_PARAMS: "--skip-tls-verification --verbose"
+          INPUT_RUN_TIMEOUT: 100
+          INPUT_DEBUG: true
+        run: |
+          wget -qO- https://raw.githubusercontent.com/ruzickap/action-test/v1/entrypoint.sh | bash
+
+      - name: Check links using container
+        uses: ruzickap/action-test@v1
+        with:
+          url: https://my-testing-domain.com
+          pages_path: ./public/
+          cmd_params: "--skip-tls-verification --verbose"
+          run_timeout: 10
+          debug: true
