--- a/.github/workflows/check-broken-links.yml
+++ b/.github/workflows/check-broken-links.yml
@@ -1,8 +1,9 @@
+name: check-broken-links
+
 on:
   schedule:
     - cron: '0 7 * * 0'
 
-name: Check broken links
 jobs:
   broken-link-checker:
     runs-on: ubuntu-18.04
