--- a/.github/workflows/markdown-checks.yml
+++ b/.github/workflows/markdown-checks.yml
@@ -12,25 +12,37 @@ on:
       - master
 
 jobs:
+  # markdown-lint-check:
+  #   runs-on: ubuntu-18.04
+  #   steps:
+  #     - uses: actions/checkout@v2
+
+  #     - name: "Install Node.js 12"
+  #       uses: actions/setup-node@v1
+  #       with:
+  #         node-version: 12.x
+
+  #     - name: "Install markdownlint-cli"
+  #       run: npm install -g markdownlint-cli
+
+  #     - name: "Create markdownlint configuration file"
+  #       run: |
+  #         echo "{ MD013: { code_blocks: false, tables: false } }" > /tmp/markdownlint_config.json
+
+  #     - name: "Run markdownlint"
+  #       run: find . -path ./node_modules -prune -o -name "*.md" -print0 | xargs -t -0 markdownlint -c /tmp/markdownlint_config.json
+
+
   markdown-lint-check:
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
 
-      - name: "Install Node.js 12"
-        uses: actions/setup-node@v1
+      - name: markdownlint-cli
+        uses: nosborn/github-action-markdown-cli@v1.1.1
         with:
-          node-version: 12.x
-
-      - name: "Install markdownlint-cli"
-        run: npm install -g markdownlint-cli
-
-      - name: "Create markdownlint configuration file"
-        run: |
-          echo "{ MD013: { code_blocks: false, tables: false } }" > /tmp/markdownlint_config.json
-
-      - name: "Run markdownlint"
-        run: find . -path ./node_modules -prune -o -name "*.md" -print0 | xargs -t -0 markdownlint -c /tmp/markdownlint_config.json
+          files: .
+          config_file: ".markdownlint.yml"
 
   markdown-spell-check:
     runs-on: ubuntu-18.04
