--- a/.github/workflows/markdown-checks.yml
+++ b/.github/workflows/markdown-checks.yml
@@ -5,9 +5,11 @@ on:
     types: [opened, synchronize]
     paths:
       - '**.md'
+      - .github/workflows/markdown-checks.yml
   push:
     paths:
       - '**.md'
+      - .github/workflows/markdown-checks.yml
     branches:
       - master
 
