--- a/.github/workflows/markdown-checks.yml
+++ b/.github/workflows/markdown-checks.yml
@@ -14,7 +14,7 @@ on:
       - master
 
 jobs:
-  markdown-lint-check:
+  markdownlint-check:
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
