--- a/.github/workflows/yamllint-checks.yml
+++ b/.github/workflows/yamllint-checks.yml
@@ -21,8 +21,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: markdownlint-cli
+      - name: yamllint
         uses: ibiqlik/action-yamllint@master
         with:
           file_or_dir: .
-          config_file: .markdownlint.yml
