--- a/.github/workflows/markdown-checks.yml
+++ b/.github/workflows/markdown-checks.yml
@@ -23,23 +23,23 @@ jobs:
         uses: nosborn/github-action-markdown-cli@v1.1.1
         with:
           files: .
-          config_file: ".markdownlint.yml"
+          config_file: .markdownlint.yml
 
   markdown-spell-check:
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
 
-      - name: "Install Node.js 12"
+      - name: Install Node.js 12
         uses: actions/setup-node@v1
         with:
           node-version: 12.x
 
-      - name: "Install markdown-spellcheck"
+      - name: Install markdown-spellcheck
         run: npm install -g markdown-spellcheck
 
-      - name: "Run mdspell"
-        run: mdspell '**/*.md' '!**/node_modules/**/*.md' --ignore-numbers --ignore-acronyms --report --en-gb
+      - name: Run mdspell
+        run: mdspell '**.md' --ignore-numbers --ignore-acronyms --report --en-gb
 
   markdown-link-check:
     runs-on: ubuntu-latest
