--- a/action.yml
+++ b/action.yml
@@ -21,7 +21,7 @@ inputs:
     required: false
     default: ''
   run_timeout:
-    description: 'Maximum number of seconds which URL checker can be running'
+    description: 'Maximum number of seconds that URL checker can be running'
     required: false
     default: '300'
   url:
