--- a/.github/workflows/mytest.yml
+++ b/.github/workflows/mytest.yml
@@ -21,3 +21,8 @@ jobs:
           T2: "${GITHUB_REPOSITORY##*/}"
           T3: "${GITHUB_REPOSITORY}"
         run: echo "${T1} | ${T2} | ${T3}"
+
+      - name: Dump GitHub context
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo "${GITHUB_CONTEXT}"
