--- a/.github/workflows/env-check.yml
+++ b/.github/workflows/env-check.yml
@@ -2,14 +2,20 @@ name: env-check
 
 on:
   schedule:
-    - cron: '17 8 * * 2'
+    - cron: '25 8 * * 2'
 
 jobs:
   env-checker:
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
+
       - name: Env test
         env:
           INPUT_URL: https://${{ github.event.repository.owner.name }}.github.io/${{ github.event.repository.name }}
         run: echo "${INPUT_URL}"
+
+      - name: Dump GitHub context
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo "${GITHUB_CONTEXT}"
