--- a/.release-it.yml
+++ b/.release-it.yml
@@ -8,7 +8,7 @@ github:
   releaseName: Broken link checker v${version}
 #hooks:
 #  before:release: npx auto-changelog && git add CHANGELOG.md
-plugins:
-  "@release-it/conventional-changelog":
-    preset: angular
-    infile: CHANGELOG.md
+#plugins:
+#  "@release-it/conventional-changelog":
+#    preset: angular
+#    infile: CHANGELOG.md
