--- a/.github/workflows/markdown-checks.yml
+++ b/.github/workflows/markdown-checks.yml
@@ -40,7 +40,7 @@ jobs:
         run: npm install -g markdown-spellcheck
 
       - name: Run mdspell
-        run: mdspell '**.md' '!CHANGELOG.md' --ignore-numbers --ignore-acronyms --report --en-gb
+        run: find . -type f \( -iname "*.md" ! -name "CHANGELOG.md" \) -exec mdspell --ignore-numbers --ignore-acronyms --report --en-gb {} \;
 
   markdown-link-check:
     runs-on: ubuntu-latest
