--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -5,9 +5,11 @@ on:
     types: [opened, synchronize]
     paths:
       - '**.sh'
+      - .github/workflows/shellcheck.yml
   push:
     paths:
       - '**.sh'
+      - .github/workflows/shellcheck.yml
     branches:
       - master
 
