--- a/.github/workflows/mytest.yml
+++ b/.github/workflows/mytest.yml
@@ -1,6 +1,8 @@
 name: mytest
 
 on:
+  pull_request:
+    types: [opened, synchronize]
   push:
     branches:
       - master
@@ -32,3 +34,7 @@ jobs:
           GITHUB_CONTEXT: ${{ github.event.repository.name }}
           GITHUB_CONTEXT2: ${{ github.event.repository.owner.name }}
         run: echo "${GITHUB_CONTEXT} | ${GITHUB_CONTEXT2}"
+
+      - name: Deploy
+        if: github.event_name == 'push'
+        run: echo "Run only in case of push to master (not PR)"
