--- a/.github/workflows/shellcheck2.yml
+++ b/.github/workflows/shellcheck2.yml
@@ -5,9 +5,11 @@ on:
     types: [opened, synchronize]
     paths:
       - '**.sh'
+      - .github/workflows/shellcheck2.yml
   push:
     paths:
       - '**.sh'
+      - .github/workflows/shellcheck2.yml
 
 jobs:
   shellcheck-check:
