Pr test - only push:

--- a/.github/workflows/mytest.yml
+++ b/.github/workflows/mytest.yml
@@ -1,11 +1,9 @@
 name: mytest
 
 on:
-  pull_request:
-    types: [opened, synchronize]
+#  pull_request:
+#    types: [opened, synchronize]
   push:
-    path:
-      - tests/**
 
 jobs:
   mytest:
