--- a/.github/workflows/mytest.yml
+++ b/.github/workflows/mytest.yml
@@ -31,7 +31,7 @@ jobs:
         env:
           GITHUB_CONTEXT: ${{ github.event.repository.name }}
           GITHUB_CONTEXT2: ${{ github.event.repository.owner.name }}
-        run: echo "${GITHUB_CONTEXT} | ${GITHUB_CONTEXT2}"
+        run: echo "| ${GITHUB_CONTEXT} | ${GITHUB_CONTEXT2}"
 
       - name: Deploy
         if: github.event_name == 'push'
