Pr test - only push: (#17)
* Pr test - only push:

* Add commit to open PR

* mytest 1

--- a/.github/workflows/mytest.yml
+++ b/.github/workflows/mytest.yml
@@ -1,11 +1,9 @@
 name: mytest
 
 on:
-  pull_request:
-    types: [opened, synchronize]
+#  pull_request:
+#    types: [opened, synchronize]
   push:
-    path:
-      - tests/**
 
 jobs:
   mytest:
@@ -33,7 +31,7 @@ jobs:
         env:
           GITHUB_CONTEXT: ${{ github.event.repository.name }}
           GITHUB_CONTEXT2: ${{ github.event.repository.owner.name }}
-        run: echo "${GITHUB_CONTEXT} | ${GITHUB_CONTEXT2}"
+        run: echo "| ${GITHUB_CONTEXT} | ${GITHUB_CONTEXT2}"
 
       - name: Deploy
         if: github.event_name == 'push'
