--- a/.github/workflows/mytest.yml
+++ b/.github/workflows/mytest.yml
@@ -6,6 +6,7 @@ on:
 jobs:
   myenv:
     runs-on: ubuntu-18.04
+    needs: shellcheck
     steps:
       - name: Test
         run: echo "::set-env name=color::yellow"
