--- a/.github/workflows/env-check.yml
+++ b/.github/workflows/env-check.yml
@@ -4,6 +4,9 @@ on:
   repository_dispatch:
   schedule:
     - cron: '0 9 * * 2'
+  push:
+    paths:
+      - .github/workflows/env-check.yml
 
 jobs:
   env-checker:
@@ -29,3 +32,12 @@ jobs:
           export AAA="${GITHUB_REPOSITORY%/*}"
           export BBB="${GITHUB_REPOSITORY##*/}"
           echo "${AAA} | ${BBB}"
+
+      - name: Env3
+        env:
+          TEST: |
+            aaa
+            bbb
+            ccc
+        run: |
+          echo "${TEST}"
