Some more examples added
Some more examples added

--- a/.github/workflows/env-check.yml
+++ b/.github/workflows/env-check.yml
@@ -40,4 +40,8 @@ jobs:
             bbb
             ccc
         run: |
+          set -x
           echo "${TEST}"
+          echo "${EXCLUDE}" | paste -s -d'|'
+          export INPUT_CMD_PARAMS="exclude=($( echo ${EXCLUDE} |  paste -s -d'|' ))"
+          echo $INPUT_CMD_PARAMS
