one more check 12345
one more check 12345

--- a/.github/workflows/env-check.yml
+++ b/.github/workflows/env-check.yml
@@ -42,6 +42,6 @@ jobs:
         run: |
           set -x
           echo "${TEST}"
-          echo "${EXCLUDE}" | paste -s -d'|'
-          export INPUT_CMD_PARAMS="exclude=($( echo ${EXCLUDE} |  paste -s -d'|' ))"
+          echo "${TEST}" | paste -s -d'|'
+          export INPUT_CMD_PARAMS="TEST=($( echo ${TEST} |  paste -s -d'|' ))"
           echo $INPUT_CMD_PARAMS
