--- a/.github/workflows/periodic-broken-links-check.yml
+++ b/.github/workflows/periodic-broken-links-check.yml
@@ -28,6 +28,8 @@ jobs:
         run: |
           export INPUT_URL="https://ruzickap.github.io/k8s-sockshop"
           export INPUT_CMD_PARAMS="--verbose --buffer-size=8192 --concurrency=10 --exclude=\"($( echo ${EXCLUDE} |  paste -s -d'|' ))\""
+          echo ${EXCLUDE} |  paste -s -d'|'
+          export DEBUG=true
           wget -qO- https://raw.githubusercontent.com/ruzickap/action-broken-link-checker/v1/entrypoint.sh | bash
 
       - name: Broken link checker 2
