--- a/.github/workflows/periodic-broken-links-check.yml
+++ b/.github/workflows/periodic-broken-links-check.yml
@@ -26,10 +26,13 @@ jobs:
             myexample.dev
             mylabs.dev
         run: |
+          set -x
           export INPUT_URL="https://ruzickap.github.io/k8s-sockshop"
           export INPUT_CMD_PARAMS="--verbose --buffer-size=8192 --concurrency=10 --exclude=\"($( echo ${EXCLUDE} |  paste -s -d'|' ))\""
           echo ${EXCLUDE} |  paste -s -d'|'
-          export DEBUG=true
+          echo ${EXCLUDE} |  paste -s -d"|"
+          echo ${EXCLUDE} |  paste -s -d";"
+          export INPUT_DEBUG=true
           wget -qO- https://raw.githubusercontent.com/ruzickap/action-broken-link-checker/v1/entrypoint.sh | bash
 
       - name: Broken link checker 2
