Changes not staged for commit
Changes not staged for committed

--- a/.github/workflows/env-check.yml
+++ b/.github/workflows/env-check.yml
@@ -47,5 +47,5 @@ jobs:
           set -x
           echo "${TEST}"
           echo "${TEST}" | paste -s -d\|
-          export INPUT_CMD_PARAMS="TEST=($( echo ${TEST} |  paste -s -d\| ))"
+          export INPUT_CMD_PARAMS=$( echo ${TEST} |  paste -s -d\| )
           echo $INPUT_CMD_PARAMS
