will be ignored, and an empty message aborts the commit
will be ignored, and an empty message aborts the commit

--- a/.github/workflows/env-check.yml
+++ b/.github/workflows/env-check.yml
@@ -47,5 +47,9 @@ jobs:
           set -x
           echo "${TEST}"
           echo "${TEST}" | paste -s -d\|
-          export INPUT_CMD_PARAMS=$( echo ${TEST} |  paste -s -d\| )
-          echo $INPUT_CMD_PARAMS
+          echo "${TEST}" | paste -s -d"|"
+          echo "*** $( echo ${TEST} |  paste -s -d\| )"
+          echo "*** $( echo ${TEST} |  paste -s -d'|' )"
+          echo "*** $( echo ${TEST} |  paste -s -d"|" )"
+          #export INPUT_CMD_PARAMS=$( echo ${TEST} |  paste -s -d\| )
+          #echo $INPUT_CMD_PARAMS
