hanges to be committed
Changes to be committed

--- a/.github/workflows/env-check.yml
+++ b/.github/workflows/env-check.yml
@@ -45,11 +45,13 @@ jobs:
             mylabs.dev
         run: |
           set -x
-          echo "${TEST}"
-          echo "${TEST}" | paste -s -d\|
-          echo "${TEST}" | paste -s -d"|"
-          echo "*** $( echo ${TEST} |  paste -s -d\| )"
-          echo "*** $( echo ${TEST} |  paste -s -d'|' )"
-          echo "*** $( echo ${TEST} |  paste -s -d"|" )"
+          #echo "${TEST}"
+          #echo "${TEST}" | paste -s -d\|
+          #echo "${TEST}" | paste -s -d"|"
+          echo "*** $( echo ${TEST} )"
+          echo "*** $( echo ${TEST} | tr ' ' '|' )"
+          #echo "*** $( echo ${TEST} |  paste -s -d\| )"
+          #echo "*** $( echo ${TEST} |  paste -s -d'|' )"
+          #echo "*** $( echo ${TEST} |  paste -s -d"|" )"
           #export INPUT_CMD_PARAMS=$( echo ${TEST} |  paste -s -d\| )
           #echo $INPUT_CMD_PARAMS
