--- a/.github/workflows/update-semver.yml
+++ b/.github/workflows/update-semver.yml
@@ -16,3 +16,4 @@ jobs:
         uses: haya14busa/action-update-semver@v1
         with:
           github_token: ${{ secrets.github_token }}
+          major_version_tag_only: true
