--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -32,4 +32,4 @@ jobs:
         run: |
           echo "${GITHUB_CONTEXT}"
           echo "*** ${{ matrix.build_name }}-${{ matrix.virtualization }}"
-          sleep 20
+          sleep $((10 * (1 + RANDOM % 10)))
