--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Create web page
         run: |
           mkdir public
-          echo '<a href="https://www.xvx.cz/">xvx.cz</a>' > public/index.html
+          echo '<a href="https://xvx.cz/">xvx.cz</a>' > public/index.html
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v2.8.0
