--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -11,15 +11,13 @@ jobs:
       - name: Create web page
         run: |
           mkdir public
-          echo test.xvx.cz > public/CNAME
-          echo '<a href="https://xvx.cz/">xvx.cz</a>' > public/index.html
+          echo test3.xvx.cz > public/CNAME
+          echo '<a href="https://test3.xvx.cz/">https://test3.xvx.cz/</a>' > public/index.html
 
       - name: Deploy
-        uses: peaceiris/actions-gh-pages@v2
+        uses: peaceiris/actions-gh-pages@v3
         if: github.event_name == 'push' && github.ref == 'refs/heads/master'
-        env:
-          ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-          PUBLISH_BRANCH: gh-pages
-          PUBLISH_DIR: public
         with:
-          forceOrphan: true
+          deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+          publish_dir: ./public
+          force_orphan: true
