--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -11,13 +11,13 @@ jobs:
       - name: Create web page
         run: |
           mkdir public
-          echo test3.xvx.cz > public/CNAME
+          #echo test3.xvx.cz > public/CNAME
           echo '<a href="https://www.xvx.cz/">https://www.xvx.cz/</a>' > public/index.html
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         if: github.event_name == 'push' && github.ref == 'refs/heads/master'
         with:
-          deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
           force_orphan: true
