--- a/.github/workflows/env-check.yml
+++ b/.github/workflows/env-check.yml
@@ -2,8 +2,8 @@ name: env-check
 
 on:
   repository_dispatch:
-  schedule:
-    - cron: '0 9 * * 2'
+  # schedule:
+  #   - cron: '0 9 * * 2'
   push:
     paths:
       - .github/workflows/env-check.yml
