Test new yamllint 12345
Test new yamllint 12345

--- a/.github/workflows/markdown-checks.yml
+++ b/.github/workflows/markdown-checks.yml
@@ -17,6 +17,7 @@ jobs:
         with:
           config: .markdownlint.yml
           ignore: CHANGELOG.md
+          args: '**.md'
 
   markdown-spell-check:
     runs-on: ubuntu-18.04
