--- a/.github/workflows/yamllint-checks.yml
+++ b/.github/workflows/yamllint-checks.yml
@@ -13,4 +13,6 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: yamllint
-        uses: ibiqlik/action-yamllint@master
+        uses: karancode/yamllint-github-action@master
+        env:
+          GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_ACCESS_TOKEN }}
