--- a/tools/create_remote_build_server/build_remote_ssh_ubuntu.yml
+++ b/tools/create_remote_build_server/build_remote_ssh_ubuntu.yml
@@ -222,6 +222,7 @@
             chdir: /home/{{ builder_username }}/actions-runner-{{ item }}
             creates: /home/{{ builder_username }}/actions-runner-{{ item }}/.runner
           loop: "{{ range(1, action_runner_count + 1) | list }}"
+          tags: actions-runner_registration
 
       become_user: "{{ builder_username }}"
 
